--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 <body>
     <!--Шапка з посиланнями-->
     <header>
-               <nav>
-            <h2> WebStudio </h2>
+        <nav>
+                <a href=""> WebStudio </a>
             <ul>
-                <li> <a href="1.html"> Студия</a> </li>
-                <li> <a href="2.html"> Портфолио </a> </li>
-                <li> <a href="3.html"> Контакты </a> </li>
+                <li> <a href=""> Студия</a> </li>
+                <li> <a href=""> Портфолио </a> </li>
+                <li> <a href=""> Контакты </a> </li>
             </ul>
         </nav>
     
     <ul>
         <li>
-            <a href="mailto:info@devstudio.com" target="blank"> info@devstudio.com </a>
+            <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+        </li>
+        <li>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
     </ul>
@@ -96,14 +98,16 @@
                 </li>
             </ul>
         </section>
-        
     </main>
     <footer>
-        <h2> WebStudio </h2>
-        <address> г. Киев, пр-т Леси Украинки, 26 
+        <a href=""> WebStudio </a>
+        <address> 
+            г. Киев, пр-т Леси Украинки, 26 
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com" target="blank"> info@devstudio.com </a>
+                <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+            </li>
+            <li>
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
